samples/errors/wrong-ref.stkn
func first()
    return second()

x: first()

func second()
    return x
